# osllm

./: .cursorrules  .gitignore  CONTEXT.md  DEPLOYMENT_TRIGGER.md  GITHUB_WORKFLOWS_REVIEW.md  HUGGINGFACE_AUTH_GUIDE.md  HUGGINGFACE_SPACE_SETUP_GUIDE.md  LICENSE  README.md  RELEASE_COMPLETE_v0.1.0.md  REORGANIZATION_REPORT.md  SECURITY.md  SOLUTION_SUMMARY.md  SPACE_AUTHENTICATION_SUMMARY.md  SPACE_READY_SUMMARY.md  app.py  autotrain_config.py  autotrain_script.py  check_deployment_status.py  check_model.py  diagnose_deployment.py  fix_hf_space.py  fix_linting.py  fix_training_upload.py  force_gradio_update.py  hf_space_README.md  hf_space_README_updated.md  hf_space_app.py  hf_space_app_complete.py  hf_space_app_final.py  hf_space_app_fixed.py  hf_space_app_gradio_441.py  hf_space_app_model_fix.py  hf_space_app_openllm_compatible.py  hf_space_app_openllm_fixed.py  hf_space_app_simple.py  hf_space_requirements.txt  hf_space_requirements_complete.txt  hf_space_requirements_updated.txt  hf_training_config.py  (+24 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  code_of_conduct_violation.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/scripts/: sync_to_hf_space.py
.github/workflows/: ci.yml  deploy-to-space.yml  sync-hf-space.yml
LICENSES/: LICENSE-COMMERCIAL  LICENSE-DUAL-INFO  LICENSE-GPL-3.0  README.md
configs/: README.md
core/: LICENSE  README.md
core/src/: convert_10k_model.py  data_loader.py  download_and_prepare.py  enterprise_integration.py  evaluate_model.py  export_model.py  generate_text.py  inference_server.py  main.py  mixed_precision.py  model.py  optimized_data_loader.py  optimized_inference_server.py  performance_monitor.py  quantization.py  test_model.py  train_model.py  train_model_improved.py  train_tokenizer.py
deployment/: README.md
deployment/huggingface/: README.md  requirements.txt  space_setup.py
deployment/huggingface/docs/: deployment_fix.md  deployment_guide.md  deployment_summary.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  DEDUPLICATION_COMPLETE.md  DEDUPLICATION_PLAN.md  DEPLOYMENT_STATUS.md  DUAL_SPACE_DOCUMENTATION_UPDATE.md  GITHUB_ACTIONS_SETUP.md  HUGGING_FACE_SPACES_GUIDE.md  LICENSES.md  OPTIMIZED_STRUCTURE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_REORGANIZATION_COMPLETE.md  PROJECT_STRUCTURE_OPTIMIZATION_SUMMARY.md  README_UPDATE_SUMMARY.md  RELEASE_NOTES_v0.1.0.md  TRAINING_IMPROVEMENTS.md  V0.1.0_CHECKPOINT_SUMMARY.md  V0.1.0_FINAL_RELEASE_SUMMARY.md  V0.1.0_RELEASE_NOTES.md  V0.1.0_RELEASE_SUMMARY.md  VERSION_CHECKPOINTING_STRATEGY.md  autotrain_guide.md  deployment_guide.md  hf_training_guide.md  production-deployment-guide.md  roadmap.md  split_repo_structure.md  training_pipeline.md  user-guide.md
docs/development/: implementation_summary.md
enterprise/: README.md
exports/huggingface/: load_hf_model.py
exports/huggingface-10k/huggingface/: README.md  load_hf_model.py
exports/huggingface-6k/huggingface/: README.md
exports/huggingface-7k/huggingface/: README.md  load_hf_model.py
exports/improved-10k-huggingface/: README.md
exports/pytorch/: load_model.py
llm/: README.md  app.py  requirements.txt
llm/core/src/: __init__.py  data_loader.py  inference_server.py  main.py  model.py  optimized_data_loader.py  optimized_inference_server.py  performance_monitor.py  quantization.py  train_model.py
llm/data/clean/: training_data_validation.txt
scripts/: README.md  export_improved_10k_to_hf.py  optimize_performance.py  pre-commit-test.py  reorganize_project.py  test_full_pipeline.py  train_new_10k_from_9k.py
scripts/evaluation/: check_model.py  evaluate_trained_model.py  test_auth.py  test_model.py  test_tokenizer.py
scripts/maintenance/: fix_deployment.py  fix_linting.py  fix_training.py
scripts/setup/: install_dependencies.py  setup_hf_auth.py  verify_installation.py
scripts/training/: compare_models.py  training_manager.py  training_with_auth.py
tests/: README.md  __init__.py  requirements-test.txt  run_tests.py  test_basic.py  test_inference.py  test_model.py  test_simple.py  test_training.py
training_space/: README.md  app.py  deploy_to_space.py  requirements.txt
